--- a/src/svg.html
+++ b/src/svg.html
@@ -8,43 +8,22 @@
   </head>
   <body>
     <h1>svg</h1>
-    <svg id="svg" width="500" height="500" style="stroke: red;">
-      <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="red" />
-      <rect
-        width="100"
-        height="100"
-        x="100"
-        y="50"
-        rx="50"
-        ry="50"
-        style="fill: blue; stroke: red; stroke-width: 2; fill-opacity: 0.5;"
-      ></rect>
-      <circle cx="50" cy="50" r="25" stroke-width="10" stroke="blue" fill="yellow"></circle>
-      <ellipse
-        cx="100"
-        cy="100"
-        rx="50"
-        ry="40"
-        stroke="pink"
-        stroke-width="5"
-        fill="orange"
-      ></ellipse>
-      <line x1="0" y1="0" x2="10" y2="10" fill="blue" stroke-width="100"></line>
-      <polygon
-        points="100,10 40,198 190,78 10,78 160,198"
-        fill-rule="evenodd"
-        style="fill: red;stroke-width: 2; stroke: blue"
-      ></polygon>
-      <polyline points="0,0 10,0 10,10 20,10 30,30 40,30" fill="blue" stroke-width="3"></polyline>
-      <text x="200" y="300" fill="red" font-size="28" font-weight="200" letter-spacing="10">
-        I love SVG
-        <tspan x="200" y="350">First Line</tspan>
-        <tspan x="200" y="390">Second Line</tspan>
-      </text>
-      <a xlink:href="http://www.w3schools.com/svg/" target="_blank">
-        <text x="300" y="15" fill="red">I love SVG</text>
-      </a>
-    </svg>
+    <svg  version="1.1"
+    baseProfile="full"
+    width="300" height="200"
+    viewBox="0 0 600 400"
+    xmlns="http://www.w3.org/2000/svg">
+    <rect width="100%" height="100%" fill="red" />
+      <circle cx="150" cy="100" r="80" fill="green" />
+    <text x="150" y="100" font-size="30" fill="white" text-anchor="middle">hello world</text> 
+    </svg> 
+    <svg
+    width="300" height="200"
+>
+    <rect width="100%" height="100%" fill="red" />
+      <circle cx="150" cy="100" r="80" fill="green" />
+    <text x="150" y="100" font-size="30" fill="white" text-anchor="middle">hello world</text> 
+    </svg> 
     <script>
       const svg = document.getElementsByName('svg');
     </script>
