--- a/src/index.html
+++ b/src/index.html
@@ -240,5 +240,223 @@
         contextMenu();
       };
     </script>
+    <div class="search-content">
+      <div class="mask"></div>
+      <div class="input">
+        <input type="text" id="search-global" />
+      </div>
+      <div class="list hidden">
+        <ul class="list-content">
+          <li class="list-item"> </li>
+        </ul>
+      </div>
+    </div>
+    <style>
+      .search-content {
+        visibility: hidden;
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+      }
+      .search-content.show {
+        visibility: visible;
+      }
+      .search-content .mask {
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #cccccc5e;
+      }
+      .search-content .input {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 35vw;
+        height: 50px;
+        left: 50%;
+        top: 50%;
+        transform: translate3d(-50%, -50%, 0);
+      }
+      .search-content .input input {
+        border: none;
+        box-shadow: 0 0 2px #ddd;
+        border-radius: 10px;
+        display: inline-block;
+        width: 80%;
+        height: 80%;
+        outline: none;
+        font-size: 32px;
+        color: black;
+        text-indent: 10px;
+      }
+      .list {
+        height: auto;
+        background: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 6px #d8d3d3;
+        height: 300px;
+        overflow-y: auto;
+      }
+      .list-content {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+      .list-item {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 10px;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+      }
+      .list-item .name {
+      }
+      .list-item:hover {
+        cursor: pointer;
+        background: #2196f3e6;
+      }
+      .list-item .btn {
+        border: 1px solid #2196f3;
+        padding: 5px 10px;
+        border-radius: 10px;
+        background: #2196f3;
+        color: white;
+      }
+      .list-item .btn:hover {
+        cursor: pointer;
+      }
+      .list-item .no-data {
+        text-align: center;
+      }
+      .list.hidden {
+        display: none;
+      }
+    </style>
+    <script>
+      function showsearch(bol) {
+        if (bol) {
+          document.querySelector('.search-content').classList.add('show');
+          document.getElementById('search-global').focus();
+        } else {
+          document.querySelector('.search-content').classList.remove('show');
+        }
+      }
+
+      function collectTag() {
+        const tagArr = document.querySelectorAll('a[data-text]');
+        const res = [];
+        tagArr.forEach(item => {
+          res.push({
+            text: item.innerText,
+            node: item,
+          });
+        });
+        return res;
+      }
+
+      function showList(target, bol = true) {
+        const listDom = document.querySelector('.list');
+        if (bol) {
+          listDom.classList.remove('hidden');
+          const clientInfo = target.getBoundingClientRect();
+          const left = clientInfo.left;
+          const top = clientInfo.top + clientInfo.height;
+          listDom.style.setProperty('left', left + 'px');
+          listDom.style.setProperty('top', top + 8 + 'px');
+          listDom.style.setProperty('width', clientInfo.width + 'px');
+        } else {
+          listDom.classList.add('hidden');
+        }
+      }
+
+      function renderList(list) {
+        const content = document.querySelector('.list-content');
+        let str = '';
+        if (list.length) {
+          str = list
+            .map(
+              (item, i) => `<li class='list-item'>
+            <span class="name">
+              ${item.text}
+            </span>
+            <span data-index='${i}' class="btn">
+              确定
+            </span></li>`
+            )
+            .join('');
+          content.innerHTML = str;
+          const firstDom = content.firstElementChild;
+          const fh = firstDom.getBoundingClientRect().height;
+          if (list.length >= 4) {
+            document.querySelector('.list').style.height = `${fh * 4}px`;
+          } else {
+            document.querySelector('.list').style.height = `${fh * list.length}px`;
+          }
+          content.addEventListener(
+            'click',
+            function(ev) {
+              const dom = ev.target;
+              if (dom.classList.contains('btn')) {
+                const index = parseInt(dom.dataset.index);
+                const domA = list[index].node;
+                domA.click();
+              }
+            },
+            false
+          );
+          document.addEventListener('click', function(ev) {
+            if (
+              !document.querySelector('.list').contains(ev.target) &&
+              ev.target.id !== 'search-global'
+            ) {
+              document.querySelector('.list').classList.add('hidden');
+            }
+          });
+        }
+      }
+
+      document.querySelector('#search-global').addEventListener(
+        'input',
+        ev => {
+          const value = ev.target.value;
+          const res = collectTag();
+          const s = res.filter(item => item.text.includes(value));
+          if (s.length && value) {
+            showList(ev.target);
+            renderList(s);
+          } else {
+            showList(ev.target, false);
+          }
+        },
+        {
+          capture: false,
+        }
+      );
+
+      window.addEventListener(
+        'keydown',
+        ev => {
+          if (ev.metaKey && ev.key === 'f') {
+            ev.preventDefault();
+            showsearch(true);
+            return;
+          }
+          if (ev.keyCode === 27) {
+            ev.preventDefault();
+            showsearch(false);
+            return;
+          }
+        },
+        false
+      );
+    </script>
   </body>
 </html>
