--- a/src/service-worker.html
+++ b/src/service-worker.html
@@ -11,9 +11,16 @@
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/util/sw.js').then((res) => {
+                if (res.installing) {
+                    console.log('installing')
+                } else if (res.waiting) {
+                    console.log('waiting')
+                } else if (res.active) {
+                    console.log('active')
+                }
                 console.log('service worker register success!')
             }).catch(err => {
-
+                console.log('server worker register wrong')
             })
         }
     </script>
@@ -22,6 +29,7 @@
     <button class='btn2'>add img2</button>
     <button class='btn3'>add img3</button>
     <button class='btn4'>fetch</button>
+    <img src="" alt="" id="target">
 
     <script>
         const btn1 = document.querySelector('.btn1');
@@ -51,6 +59,55 @@
             })
         }, false)
 
+    </script>
+
+    <script>
+
+const image = document.getElementById('target');
+
+// Fetch the original image
+fetch('./img/pic0.jpg', {
+    method: 'get',
+    mode: 'cors',
+    referrer: 'no-referrer',
+    credentials: 'include',
+    cache: 'no-cache'
+})
+// Retrieve its body as ReadableStream
+.then(response => response.body)
+.then(rs => {
+    const reader = rs.getReader();
+
+    return new ReadableStream({
+        async start(control) {
+            while(true) {
+                const {done, value} = await reader.read();
+                if (done) {
+                    break;
+                }
+                control.enqueue(value);
+            }
+            control.close();
+            reader.releaseLock();
+        }
+    })
+})
+// Create a new response out of the stream
+.then(rs => new Response(rs, {'content-type': 'image/jpg'}))
+// Create an object URL for the response
+.then(res => res.blob())
+.then(blob => URL.createObjectURL(blob))
+// Update image
+.then(url => image.src = url)
+.catch(console.error);
+    </script>
+
+    <script>
+     fetch("https://www.baidu.com", {
+         mode: 'no-cors'
+     }).then((response) => {
+        console.log(response)
+     });
     </script>
     <style>
         img {
