--- a/src/css3.html
+++ b/src/css3.html
@@ -595,5 +595,32 @@
         })
       }
     </script>
+    <ul class='nth-child'>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+    </ul>
+    <style>
+      .nth-child li {
+        display: inline-block;
+        background-color: white;
+      }
+      /* .nth-child li:nth-child(odd) {
+        background-color: yellow;
+      }
+      .nth-child li:nth-child(even) {
+        background-color: red;
+      } */
+      .nth-child li:nth-child(n + 3) {
+        background-color: blue;
+      }
+    </style>
   </body>
 </html>
