--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
     <div class="search-content">
       <div class="mask"></div>
       <div class="input">
-        <input type="text" id="search-global" />
+        <input type="text" id="search-global" placeholder="请输入关键词" />
       </div>
       <div class="list hidden">
         <ul class="list-content">
